crates/oxide-code/src/tui/components/snapshots/ox__tui__components__chat__tests__render_empty_shows_welcome_screen.snap
---
source: crates/oxide-code/src/tui/components/chat.rs
expression: "render_chat(&mut chat, 60, 8)"
---
"                                                            "
"                                                            "
"                       Welcome to ox                        "
"                   Ask anything to begin.                   "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
