crates/oxide-code/src/tui/components/snapshots/ox__tui__components__chat__tests__render_error_entry_is_styled_distinctly.snap
---
source: crates/oxide-code/src/tui/components/chat.rs
assertion_line: 1534
expression: "render_chat(&mut chat, 60, 4)"
---
"✗ API error (HTTP 503): overloaded                          "
"                                                            "
"                                                            "
"                                                            "
