crates/oxide-code/src/tui/components/snapshots/ox__tui__components__chat__tests__render_history_with_resumed_thinking_block.snap
---
source: crates/oxide-code/src/tui/components/chat.rs
assertion_line: 1555
expression: "render_chat(&mut chat, 60, 10)"
---
"❯ hello                                                     "
"                                                            "
"◇ Thinking...                                               "
"  pondering...                                              "
"                                                            "
"◉ Hi!                                                       "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
