crates/oxide-code/src/tui/components/snapshots/ox__tui__components__chat__tests__render_tool_call_followed_by_result.snap
---
source: crates/oxide-code/src/tui/components/chat.rs
expression: "render_chat(&mut chat, 60, 10)"
---
"  ▎ $ echo hi                                               "
"  ▎   ✓ ran echo                                            "
"  ▎     hi                                                  "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
