crates/oxide-code/src/tui/components/snapshots/ox__tui__components__chat__tests__render_tool_call_with_edit_diff_error_uses_error_border_color.snap
---
source: crates/oxide-code/src/tui/components/chat.rs
expression: "render_chat(&mut chat, 60, 10)"
---
"▎ ✎ Edit(/tmp/f.rs)                                         "
"▎ ✗ Edited f.rs                                             "
"▎   - fn foo() {}                                           "
"▎   + fn foo() -> i32 { 42 }                                "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
