crates/oxide-code/src/tui/components/snapshots/ox__tui__components__chat__tests__render_tool_call_with_edit_diff_over_budget_truncates_both_sides.snap
---
source: crates/oxide-code/src/tui/components/chat.rs
expression: "render_chat(&mut chat, 60, 16)"
---
"▎ ✎ Edit(/tmp/big.rs)                                       "
"▎ ✓ Edited big.rs                                           "
"▎   - old0                                                  "
"▎   - old1                                                  "
"▎   - old2                                                  "
"▎   - old3                                                  "
"▎   ... +3 lines                                            "
"▎   - old7                                                  "
"▎   + new0                                                  "
"▎   + new1                                                  "
"▎   + new2                                                  "
"▎   + new3                                                  "
"▎   ... +3 lines                                            "
"▎   + new7                                                  "
"                                                            "
"                                                            "
