crates/oxide-code/src/tui/components/snapshots/ox__tui__components__chat__tests__render_tool_call_with_edit_diff_trims_identical_boundary_lines.snap
---
source: crates/oxide-code/src/tui/components/chat.rs
expression: "render_chat(&mut chat, 60, 8)"
---
"▎ ✎ Edit(/tmp/f.rs)                                         "
"▎ ✓ Edited f.rs                                             "
"▎   +     return 42;                                        "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
