crates/oxide-code/src/tui/components/snapshots/ox__tui__components__chat__tests__render_tool_call_with_edit_diff_wraps_long_lines_under_bar.snap
---
source: crates/oxide-code/src/tui/components/chat.rs
expression: "render_chat(&mut chat, 40, 10)"
---
"▎ ✎ Edit(/tmp/f.rs)                     "
"▎ ✓ Edited f.rs                         "
"▎   - short                             "
"▎   + an intentionally quite long       "
"▎     replacement line that forces      "
"▎     wrapping                          "
"                                        "
"                                        "
"                                        "
"                                        "
