crates/oxide-code/src/tui/components/snapshots/ox__tui__components__chat__tests__render_tool_result_overflow_shows_line_count.snap
---
source: crates/oxide-code/src/tui/components/chat.rs
expression: "render_chat(&mut chat, 60, 14)"
---
"  ▎ $ ls                                                    "
"  ▎   ✓ ls out                                              "
"  ▎     line 0                                              "
"  ▎     line 1                                              "
"  ▎     line 2                                              "
"  ▎     line 3                                              "
"  ▎     line 4                                              "
"  ▎     ... 3 more lines                                    "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
